--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,18 @@ html {
     background: white;
     padding: 8%;
     text-align: justify;
-    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 15px 3px rgba(0, 0, 0, 0.3);
     transition: transform 0.5s;
     margin: 10% auto; }
+    html .text-content .align-right {
+      float: right;
+      margin-left: 2%; }
+    html .text-content .align-left {
+      float: left;
+      margin-right: 2%; }
   html header {
     text-align: center;
-    height: 90vh;
+    height: 88vh;
     background: url(https://images.unsplash.com/photo-1498805983167-a523078d762c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=65c2c2fee586564dcd79cb249099d757&auto=format&fit=crop&w=1085&q=80) center no-repeat;
     background-size: cover;
     display: flex;
@@ -31,13 +37,15 @@ html {
       text-shadow: 3px 3px 3px rgba(255, 255, 255, 0.5); }
   html nav {
     background: rgba(0, 0, 0, 0.945);
-    top: 0;
-    width: 100%;
     height: 10vh;
-    transition: all .5s;
+    top: 0;
+    width: 100vw;
+    transition: .5s;
     position: relative;
     z-index: 1; }
     html nav ul {
+      width: 100%;
+      height: 100%;
       list-style: none;
       display: flex; }
       html nav ul li {
@@ -50,23 +58,30 @@ html {
         font-family: "Courier New", sans-serif;
         max-width: 0;
         overflow: hidden;
-        transition: all .5s;
-        font-weight: 600;
-        font-size: .5em; }
+        transition: .8s;
+        font-size: .7em; }
         html nav ul li.land a {
-          color: red; }
+          color: red;
+          text-shadow: none;
+          letter-spacing: none; }
     html nav a {
       text-decoration: none;
-      padding: 20px;
       display: inline-block;
       color: white;
-      transition: all 0.2s;
+      transition: 0.2s;
       text-transform: uppercase;
-      letter-spacing: .5vw; }
+      letter-spacing: 5px;
+      text-shadow: 2px 1px 2px rgba(255, 255, 255, 0.7); }
+      html nav a:first-letter {
+        color: red;
+        text-shadow: 2px 1px 2px #7a2323; }
 
 body.nav-fixed nav {
   position: fixed;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3); }
+  box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3); }
+body.nav-fixed .text-content {
+  transform: scale(1.05);
+  box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.1); }
 
 body.land-active li.land {
   max-width: 100%; }
